fix HomeCard vertical alignment

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@ nav.fixed-top {
 }
 
 nav {
-  background-color: rgb(52, 114, 46);
+  background-color: rgba(52, 114, 46, 0.9);
 }
 
 .navbar-brand, .nav-link {
